# whatsapp_chat_autoexport

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.Docker.md  README.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  whatsapp_export.py  whatsapp_process.py
.claude/: testing.md
.claude/commands/: primer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
.prp/: issue-7-missing-has-audio-stream-method.md
.serena/: project.yml
docs/: GOOGLE_DRIVE_SETUP.md  PHASE1_COMPLETE.txt  PHASE1_SUMMARY.md  PHASE1_TEST_RESULTS.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PROJECT_COMPLETE.md  changelog.md  index.md
docs/api/: index.md
docs/brainstorms/: 2026-03-26-textual-tui-consolidation-requirements.md  2026-03-28-export-speed-optimization-requirements.md  2026-03-29-discovery-speed-optimization-requirements.md  2026-04-01-tui-tab-navigation-requirements.md  2026-04-06-tui-ux-refinements-requirements.md
docs/discovery/: 2026-04-08-001-phone-local-export-discovery.md
docs/failure-reports/: 2026-04-16-full-run-pause.md  2026-04-18-pipeline-throughput-smoke-regression.md
docs/getting-started/: docker.md  quickstart.md
docs/guide/: cli-reference.md  media-and-transcription.md  troubleshooting.md  wireless-adb.md
docs/plans/: 2026-03-26-001-fix-export-batch-session-recovery-plan.md  2026-03-26-002-refactor-textual-tui-consolidation-plan.md  2026-03-26-003-feat-mcp-incremental-sync-and-format-spec-plan.md  2026-03-28-001-feat-export-speed-optimization-plan.md  2026-03-29-001-feat-discovery-speed-optimization-plan.md  2026-03-31-003-feat-xml-collection-live-discovery-plan.md  2026-04-01-001-refactor-tui-tab-navigation-plan.md  2026-04-06-001-refactor-tui-ux-refinements-plan.md  2026-04-08-001-feat-v1.0.0-public-release-roadmap.md  2026-04-08-002-feat-v0.3.0-drive-integration-plan.md  2026-04-17-001-fix-full-run-failures-plan.md  2026-04-17-002-fix-pipeline-throughput-plan.md  2026-04-19-001-fix-drive-client-thread-safety-plan.md  2026-04-19-002-feat-drive-duplicate-cleanup-plan.md  2026-04-19-002-feat-format-spec-output-plan.md  2026-04-19-003-feat-whatsapp-sync-service-plan.md
docs/specs/: 2026-04-17-pipeline-throughput-design.md  2026-04-19-drive-client-thread-safety-design.md  2026-04-19-drive-duplicate-cleanup-design.md  2026-04-19-whatsapp-sync-service-design.md  2026-04-27-preflight-design.md  transcript-format-spec.md
docs/tests_old/: test_api_key_errors.py  test_cli_args.py  test_opus_conversion.py  test_output_builder.py  test_phase1.py  test_polling_integration.py  test_processing.py  test_transcript_parser.py  test_transcription.py
sample_data/WhatsApp Chat with Example/: Fringe 22.doc  PTT-20190919-WA0005.opus  PTT-20190919-WA0005_transcription.txt  PTT-20200130-WA0000.opus  PTT-20200210-WA0003.opus  PTT-20200210-WA0004.opus  PTT-20200217-WA0003.opus  PTT-20200217-WA0007.opus  PTT-20200221-WA0000.opus  PTT-20200808-WA0000.opus  PTT-20200808-WA0001.opus  PTT-20200809-WA0000.opus  PTT-20200820-WA0005.opus  PTT-20201005-WA0004.opus  PTT-20201006-WA0005.opus  PTT-20201006-WA0006.opus  PTT-20201006-WA0008.opus  PTT-20201014-WA0001.opus  PTT-20201014-WA0002.opus  PTT-20210809-WA0002.opus  PTT-20210809-WA0003.opus  PTT-20210809-WA0004.opus  PTT-20210828-WA0010.opus  PTT-20210828-WA0011.opus  PTT-20210906-WA0002.opus  PTT-20210906-WA0003.opus  PTT-20210906-WA0004.opus  PTT-20220105-WA0004.opus  PTT-20220221-WA0007.opus  PTT-20220221-WA0008.opus  PTT-20220408-WA0000.opus  PTT-20220819-WA0000.opus  PTT-20220819-WA0001.opus  PTT-20220819-WA0002.opus  PTT-20221028-WA0001.opus  PTT-20221028-WA0002.opus  PTT-20221028-WA0003.opus  PTT-20221104-WA0000.opus  PTT-20221104-WA0001.opus  PTT-20221108-WA0003.opus  (+79 more)
scratchpads/: issue-4-mp4-video-transcription.md
tests/: README.md  conftest.py
tests/integration/: README_drive_integration.md  test_cli.py  test_connect_pane_preflight.py  test_drive_client_concurrency.py  test_headless_preflight.py  test_ingest_command.py  test_migrate_command.py  test_parallel_export.py  test_rebuild_command.py  test_spec_output.py  test_sync_command.py  test_tab_navigation.py  test_textual_tui.py
tests/manual/: test_preflight_live.py
tests/unit/: test_api_key_manager.py  test_archive_extractor.py  test_audio_converter.py  test_automation.py  test_bridge_reader.py  test_chat_exporter_verify_cascade.py  test_chat_list_reasons.py  test_cli.py  test_cli_entry.py  test_community_detection.py  test_config.py  test_connect_pane.py  test_core.py  test_dedup.py  test_delete_sibling_exports.py  test_deprecated_entry.py  test_discover_select_pane.py  test_discovery_screen.py  test_discovery_speed.py  test_drive_client_threading.py  test_drive_polling.py  test_export_models.py  test_export_pane.py  test_export_progress.py  test_export_recovery.py  test_export_steps.py  test_foreground_wait.py  test_headless.py  test_index_builder.py  test_legacy_migration.py  test_main_screen.py  test_mcp_source.py  test_mcp_state.py  test_output_builder.py  test_parallel_pipeline.py  test_pipeline_only.py  test_pipeline_progress.py  test_preflight_panel.py  test_preflight_probes.py  test_preflight_report.py  (+13 more)
whatsapp_chat_autoexport/: __init__.py  cli_entry.py  constants.py  deprecated_entry.py  export_log.txt  headless.py  pipeline.py  whatsapp_export.py  whatsapp_process.py
whatsapp_chat_autoexport/automation/: __init__.py
whatsapp_chat_autoexport/cli/: config.py
whatsapp_chat_autoexport/config/: __init__.py  api_key_manager.py  selectors.py  settings.py  theme_manager.py  themes.py  timeouts.py
whatsapp_chat_autoexport/core/: __init__.py  errors.py  events.py  interfaces.py  result.py
whatsapp_chat_autoexport/export/: appium_manager.py  chat_exporter.py  checkpoint_manager.py  cli.py  foreground_wait.py  interactive.py  models.py  parallel_pipeline.py  timing.py  whatsapp_driver.py
(+141 files in other folders)
